# edw

./: .firebaserc  .gitignore  README.md  app.js  copy_logo.js  docker-compose.yml  index.css  index.html  search_js.js  search_js.py  validate_elements.js  validate_elements.ps1  vercel.json
.mimocode/skills/project-context/: SKILL.md
.mimocode/skills/sqlite-query/: SKILL.md
.vercel/: project.json
backend/: .gitignore  Dockerfile  package-lock.json  package.json  tsconfig.json
backend/prisma/: dev.db  schema.prisma  schema.sqlite.prisma
backend/src/: server.ts
backend/src/controllers/: admin.ts  aiCoach.ts  ambassador.ts  auth.ts  community.ts  network.ts  notifications.ts  opportunities.ts  profile.ts  resume.ts  subscription.ts
backend/src/lib/: db.ts  email.ts  storage.ts
backend/src/middlewares/: auth.ts
backend/src/routes/: admin.ts  aiCoach.ts  ambassador.ts  auth.ts  community.ts  network.ts  notifications.ts  opportunities.ts  profile.ts  resume.ts  subscription.ts
backend/src/services/: ragPipeline.ts
fastapi-backend/: pyproject.toml
fastapi-backend/app/: __init__.py  auth.py  database.py  email.py  main.py  models.py
fastapi-backend/app/routers/: auth.py  profile.py  resume.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/public/: firebase-messaging-sw.js  manifest.json
frontend/src/app/: error.tsx  globals.css  layout.tsx  not-found.tsx
frontend/src/components/: GlobalChatbot.tsx  (+1 more)
legacy-vue-app/: index.html  package-lock.json  package.json  tailwind.config.js
legacy-vue-app/src/: App.vue  main.ts
(+47 files in other folders)
